--- a/webapp/public/javascripts/angular/wizard.html
+++ b/webapp/public/javascripts/angular/wizard.html
@@ -145,3 +145,8 @@
   </wizard>
 
 </div>
+
+<!-- List with database tables -->
+<datalist id='databaseTableList'>
+    <option ng-repeat="table in tableList" value="{{table}}">
+</datalist>
