--- a/webapp/public/javascripts/angular/wizard.html
+++ b/webapp/public/javascripts/angular/wizard.html
@@ -5,7 +5,7 @@
       <a ui-sref="wizard" class="btn btn-default pull-right" ng-show="!isWizard" ng-click="onFormView()"><i class="fa fa-magic" style="margin-right: 3px;"></i>{{ i18n.__('Wizard mode') }}</a>
     </div>
     <!-- alert box -->
-    <terrama2-alert-box alert-level="alertLevel" title="alertBox.title" message="alertBox.message" close="resetState()" display-handler="display" extra="extraProperties"></terrama2-alert-box>
+    <terrama2-alert-box2 handler="MessageBoxService.alertBox" close="MessageBoxService.reset()" extra=MessageBoxServe.alertBox.extra></terrama2-alert-box2>
   </div>
 
   <wizard template="/javascripts/angular/templates/terrama2-wizard.html">
