Using new alert box in advanced mode

--- a/webapp/public/javascripts/angular/advanced.html
+++ b/webapp/public/javascripts/angular/advanced.html
@@ -6,7 +6,7 @@
 
   </div>
   <!-- alert box -->
-  <terrama2-alert-box alert-level="alertLevel" title="alertBox.title" message="alertBox.message" close="resetState()" display-handler="display" extra="extraProperties"></terrama2-alert-box>
+  <terrama2-alert-box2 handler="MessageBoxService.alertBox" close="MessageBoxService.reset()" extra=MessageBoxServe.alertBox.extra></terrama2-alert-box2>
 </div>
 
 <div class="col-md-12">
