--- a/webapp/public/javascripts/angular/generalData.html
+++ b/webapp/public/javascripts/angular/generalData.html
@@ -56,7 +56,7 @@
       <div class="form-group">
         <div class="checkbox">
           <label style="font-weight: 700; margin-top:19px;">
-            <input name="active" ng-model="dataSeries.active" type="checkbox" ng-init="dataSeries.active=true"> {{ i18n.__("Active") }}
+            <input name="active" ng-model="dataSeries.active" type="checkbox" ng-init="dataSeries.active=(!isUpdating ? true : dataSeries.active)"> {{ i18n.__("Active") }}
           </label>
         </div>
       </div>
