--- a/webapp/public/javascripts/angular/wizard.html
+++ b/webapp/public/javascripts/angular/wizard.html
@@ -46,6 +46,7 @@
 
           <div class="col-md-2 terrama2-top-field">
             <button class="btn btn-default" ng-show="semantics === 'DCP'" ng-click="addDcp(parametersForm)">{{ i18n.__('Add') }}</button>
+            <button class="btn btn-default" ng-show="semantics === 'DCP'" ng-disabled="isUpdating" ng-click="openImportModal()">{{ i18n.__('Import CSV') }}</button>
           </div>
 
           <div ng-include="'/javascripts/angular/dcpTable.html'"></div>
