--- a/webapp/public/javascripts/angular/dcpTable.html
+++ b/webapp/public/javascripts/angular/dcpTable.html
@@ -60,7 +60,7 @@
             </label>
           </div>
         </div>
-        <hr/>
+        <hr style="border: 1px solid #eee !important;"/>
         <button type="button" class="btn btn-default pull-left" data-dismiss="modal">Close</button>
         <button type="button" class="btn btn-primary pull-right" ng-click="import()">Import</button>
         <div style="clear: both;"></div>
