--- a/webapp/public/javascripts/angular/advanced.html
+++ b/webapp/public/javascripts/angular/advanced.html
@@ -47,7 +47,7 @@
 
             <div class="col-md-2 terrama2-top-field" style="padding-bottom: 40px;">
               <button class="btn btn-default" ng-show="semantics === 'DCP'" ng-disabled="isUpdating" ng-click="addDcp(parametersForm)">{{ i18n.__('Add') }}</button>
-              <button class="btn btn-default" ng-show="semantics === 'DCP'" ng-disabled="isUpdating" ng-click="openImportModal()">{{ i18n.__('Import CSV') }}</button>
+              <button class="btn btn-default" ng-show="semantics === 'DCP'" ng-disabled="isUpdating" ng-click="openImportParametersModal()">{{ i18n.__('Import CSV') }}</button>
             </div>
 
             <terrama2-dcp-importer></terrama2-dcp-importer>
