--- a/webapp/public/javascripts/angular/dcpTable.html
+++ b/webapp/public/javascripts/angular/dcpTable.html
@@ -1,8 +1,14 @@
 <div class="col-md-12 terrama2-nopadding-box" ng-show="(semantics === 'DCP') && isDynamic" style="margin-bottom: 30px;">
   <div class="col-md-12">
     <div class="box-body table-responsive no-padding">
-      <table datatable="" dt-options="vm.dtOptions" dt-columns="vm.dtColumns" dt-instance="vm.dtInstance" class="row-border hover"></table>
-    </div><!-- /.box-body -->
+      <table class="dcpTable table table-striped" style="width: 100%;">
+        <thead>
+          <tr>
+            <th ng-repeat="field in tableFields track by $index">{{ capitalizeIt(field) }}</th>
+          </tr>
+        </thead>
+      </table>
+    </div>
   </div>
 </div>
 
