adding the id to the registers and deleting the registers

--- a/webapp/public/javascripts/angular/dcpTable.html
+++ b/webapp/public/javascripts/angular/dcpTable.html
@@ -4,7 +4,7 @@
       <table class="dcpTable table table-striped" style="width: 100%;">
         <thead>
           <tr>
-            <th ng-repeat="field in tableFields track by $index">{{ capitalizeIt(field) }}</th>
+            <th ng-repeat="field in tableFieldsDataTable track by $index">{{ capitalizeIt(field) }}</th>
           </tr>
         </thead>
       </table>
