Behavior to block intersection form in advanced mode

--- a/webapp/public/javascripts/angular/advanced.html
+++ b/webapp/public/javascripts/angular/advanced.html
@@ -126,7 +126,7 @@
       <span ng-if="advanced.intersection.disabled && advanced.intersection.optional" 
           class="enable-button-click"
           ng-class="terrama2-font-black"
-          data-toggle="tooltip" title="Add intersection configuration"
+          data-toggle="tooltip" title="{{advanced.intersection.message}}"
           ng-click="advanced.intersection.openForm()">
         <i class="fa fa-plus-circle"></i>
       </span>
