--- a/webapp/public/javascripts/angular/dcpTable.html
+++ b/webapp/public/javascripts/angular/dcpTable.html
@@ -6,7 +6,7 @@
         <!-- header-->
         <tr>
           <th>ID</th>
-          <th ng-repeat="field in tableFields track by $index">{{ capitalizeIt(field) }}</th>
+          <th ng-repeat="field in tableFields track by $index">{{ i18n.__(capitalizeIt(field)) }}</th>
           <th></th>
         </tr>
 
