correcting dcps editions

--- a/webapp/public/javascripts/angular/wizard.html
+++ b/webapp/public/javascripts/angular/wizard.html
@@ -1,3 +1,7 @@
+<div class="overlay overlay-dcps" ng-show="isChecking.value">
+  <i class="fa fa-refresh fa-spin" style="position: fixed !important;"></i>
+</div>
+
 <div class="row">
   <div class="col-md-12">
     <div style="padding-bottom: 50px;">
