--- a/webapp/public/javascripts/angular/advanced.html
+++ b/webapp/public/javascripts/angular/advanced.html
@@ -178,18 +178,20 @@
 </div>
 
 <div class="box-footer">
-    <div class="btn-group pull-right" style="margin-left: 10px;" ng-show="isDynamic && storager.format">
-      <button type="button" class="btn btn-primary" ng-bind="i18n.__('Save and Run')" data-ng-click="save(true);"></button>
-      <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        <span class="caret"></span>
-        <span class="sr-only"></span>
-      </button>
-      <ul class="dropdown-menu terrama2-button-dropdown">
-        <li><a href="javascript::void();" data-ng-click="save(false);" ng-bind="i18n.__('Save')"></a></li>
-      </ul>
-    </div>
-    <button type="button" class="btn btn-primary pull-right" style="margin-left: 10px;" ng-bind="i18n.__('Save')" ng-show="isDynamic && !storager.format" data-ng-click="save(false);"></button>
-    <a href="/configuration/dynamic/dataseries/" class="btn btn-primary pull-right" style="margin-left: 10px;">{{ i18n.__('Cancel') }}</a>
+  <div class="btn-group pull-right" style="margin-left: 10px;" ng-show="isDynamic && storager.format">
+    <button type="button" class="btn btn-primary" ng-bind="i18n.__('Save and Run')" data-ng-click="save(true);"></button>
+    <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <span class="caret"></span>
+      <span class="sr-only"></span>
+    </button>
+    <ul class="dropdown-menu terrama2-button-dropdown">
+      <li><a href="javascript::void();" data-ng-click="save(false);" ng-bind="i18n.__('Save')"></a></li>
+    </ul>
+  </div>
+  <button type="button" class="btn btn-primary pull-right" style="margin-left: 10px;" ng-bind="i18n.__('Save')" ng-show="!isDynamic" data-ng-click="save(false);"></button>
+  <button type="button" class="btn btn-primary pull-right" style="margin-left: 10px;" ng-bind="i18n.__('Save')" ng-show="isDynamic && !storager.format" data-ng-click="save(false);"></button>
+  <a href="/configuration/dynamic/dataseries/" class="btn btn-primary pull-left" ng-show="isDynamic">{{ i18n.__('Cancel') }}</a>
+  <a href="/configuration/static/dataseries" class="btn btn-primary pull-left" ng-show="!isDynamic">{{ i18n.__('Cancel') }}</a>
 </div>
 
 
