creating the base_url

--- a/webapp/public/javascripts/angular/advanced.html
+++ b/webapp/public/javascripts/angular/advanced.html
@@ -25,7 +25,7 @@
     <!-- /.box-header -->
     <div style="display: block;" class="box-body">
       <form name="forms.generalDataForm">
-        <div ng-include="'/javascripts/angular/generalData.html'"></div>
+        <div ng-include="'{[ BASE_URL ]}javascripts/angular/generalData.html'"></div>
       </form>
     </div>
   </div>
@@ -55,7 +55,7 @@
             </div>
 
             <terrama2-dcp-importer></terrama2-dcp-importer>
-            <div ng-include="'/javascripts/angular/dcpTable.html'"></div>
+            <div ng-include="'{[ BASE_URL ]}javascripts/angular/dcpTable.html'"></div>
           </div>
 
         </div>
@@ -141,7 +141,7 @@
     <!-- /.box-header -->
     <div class="box-body">
       <form name="filterForm">
-        <div ng-include="'/javascripts/angular/filter.html'"></div>
+        <div ng-include="'{[ BASE_URL ]}javascripts/angular/filter.html'"></div>
       </form>
     </div>
   </div>
@@ -172,7 +172,7 @@
     </div>
     <!-- /.box-header -->
     <div class="box-body">
-      <div ng-include="'/javascripts/angular/data-series/templates/intersection.html'"></div>
+      <div ng-include="'{[ BASE_URL ]}javascripts/angular/data-series/templates/intersection.html'"></div>
     </div>
   </div>
 </div>
@@ -190,8 +190,8 @@
   </div>
   <button type="button" class="btn btn-primary pull-right" style="margin-left: 10px;" ng-bind="i18n.__('Save')" ng-show="!isDynamic" data-ng-click="save(false);"></button>
   <button type="button" class="btn btn-primary pull-right" style="margin-left: 10px;" ng-bind="i18n.__('Save')" ng-show="isDynamic && !storager.format" data-ng-click="save(false);"></button>
-  <a href="/configuration/dynamic/dataseries/" class="btn btn-primary pull-left" ng-show="isDynamic">{{ i18n.__('Cancel') }}</a>
-  <a href="/configuration/static/dataseries" class="btn btn-primary pull-left" ng-show="!isDynamic">{{ i18n.__('Cancel') }}</a>
+  <a href="{[ BASE_URL ]}configuration/dynamic/dataseries/" class="btn btn-primary pull-left" ng-show="isDynamic">{{ i18n.__('Cancel') }}</a>
+  <a href="{[ BASE_URL ]}configuration/static/dataseries" class="btn btn-primary pull-left" ng-show="!isDynamic">{{ i18n.__('Cancel') }}</a>
 </div>
 
 
