--- a/webapp/public/javascripts/angular/wizard.html
+++ b/webapp/public/javascripts/angular/wizard.html
@@ -21,8 +21,8 @@
       </div>
 
       <div class="col-md-12" style="margin-top: 30px;">
-        <a href="{[ BASE_URL ]}configuration/dynamic/dataseries/" class="btn btn-primary pull-left" ng-show="isDynamic">{{ i18n.__('Cancel') }}</a>
-        <a href="{[ BASE_URL ]}configuration/static/dataseries" class="btn btn-primary pull-left" ng-show="!isDynamic">{{ i18n.__('Cancel') }}</a>
+        <a href="" class="btn btn-primary pull-left cancel-dynamic" ng-show="isDynamic">{{ i18n.__('Cancel') }}</a>
+        <a href="" class="btn btn-primary pull-left cancel-static" ng-show="!isDynamic">{{ i18n.__('Cancel') }}</a>
         <div class="pull-right">
           <button class="btn btn-primary" type="submit" wz-next>{{ i18n.__('Next') }}</button>
           <button type="button" class="btn btn-primary" ng-bind="i18n.__('Save')" ng-show="!isDynamic" data-ng-click="save(false);"></button>
@@ -60,8 +60,8 @@
       </div>
 
       <div class="col-md-12" style="margin-top: 30px;">
-        <a href="{[ BASE_URL ]}configuration/dynamic/dataseries/" class="btn btn-primary pull-left" ng-show="isDynamic">{{ i18n.__('Cancel') }}</a>
-        <a href="{[ BASE_URL ]}configuration/static/dataseries" class="btn btn-primary pull-left" ng-show="!isDynamic">{{ i18n.__('Cancel') }}</a>
+        <a href="" class="btn btn-primary pull-left cancel-dynamic" ng-show="isDynamic">{{ i18n.__('Cancel') }}</a>
+        <a href="" class="btn btn-primary pull-left cancel-static" ng-show="!isDynamic">{{ i18n.__('Cancel') }}</a>
         <div class="pull-right">
           <button class="btn btn-primary" type="submit" wz-previous>{{ i18n.__('Previous') }}</button>
           <button class="btn btn-primary" type="submit" ng-show="isDynamic && (!wizard.store.disabled || !wizard.filter.disabled || !wizard.intersection.disabled || !wizard.csvFormatForm.disabled)" ng-click="goToValidNextStep('parametersForm');" wz-next>{{ i18n.__('Next') }}</button>
@@ -89,8 +89,8 @@
       </div>
 
       <div class="col-md-12" style="margin-top: 30px;">
-        <a href="{[ BASE_URL ]}configuration/dynamic/dataseries/" class="btn btn-primary pull-left" ng-show="isDynamic">{{ i18n.__('Cancel') }}</a>
-        <a href="{[ BASE_URL ]}configuration/static/dataseries" class="btn btn-primary pull-left" ng-show="!isDynamic">{{ i18n.__('Cancel') }}</a>
+        <a href="" class="btn btn-primary pull-left cancel-dynamic" ng-show="isDynamic">{{ i18n.__('Cancel') }}</a>
+        <a href="" class="btn btn-primary pull-left cancel-static" ng-show="!isDynamic">{{ i18n.__('Cancel') }}</a>
         <div class="pull-right">
           <button class="btn btn-primary" type="submit" ng-click="goToValidPreviousStep('filterForm');" wz-previous>{{ i18n.__('Previous') }}</button>
           <button class="btn btn-primary" type="submit" ng-show="isDynamic && (!wizard.store.disabled || !wizard.filter.disabled || !wizard.intersection.disabled)" ng-click="goToValidNextStep('storeForm');" wz-next>{{ i18n.__('Next') }}</button>
@@ -116,8 +116,8 @@
 
       </div>
       <div class="col-md-12" style="margin-top: 30px;">
-        <a href="{[ BASE_URL ]}configuration/dynamic/dataseries/" class="btn btn-primary pull-left" ng-show="isDynamic">{{ i18n.__('Cancel') }}</a>
-        <a href="{[ BASE_URL ]}configuration/static/dataseries" class="btn btn-primary pull-left" ng-show="!isDynamic">{{ i18n.__('Cancel') }}</a>
+        <a href="" class="btn btn-primary pull-left cancel-dynamic" ng-show="isDynamic">{{ i18n.__('Cancel') }}</a>
+        <a href="" class="btn btn-primary pull-left cancel-static" ng-show="!isDynamic">{{ i18n.__('Cancel') }}</a>
         <div class="pull-right">
           <button class="btn btn-primary" type="submit" wz-previous>{{ i18n.__('Previous') }}</button>
           <button class="btn btn-primary" type="submit" ng-show="!wizard.filter.disabled || !wizard.intersection.disabled" ng-click="goToValidNextStep('storagerForm');" wz-next>{{ i18n.__('Next') }}</button>
@@ -141,8 +141,8 @@
         <div id="includeFilter" ng-include=""></div>
       </div>
       <div class="col-md-12" style="margin-top: 30px;">
-        <a href="{[ BASE_URL ]}configuration/dynamic/dataseries/" class="btn btn-primary pull-left" ng-show="isDynamic">{{ i18n.__('Cancel') }}</a>
-        <a href="{[ BASE_URL ]}configuration/static/dataseries" class="btn btn-primary pull-left" ng-show="!isDynamic">{{ i18n.__('Cancel') }}</a>
+        <a href="" class="btn btn-primary pull-left cancel-dynamic" ng-show="isDynamic">{{ i18n.__('Cancel') }}</a>
+        <a href="" class="btn btn-primary pull-left cancel-static" ng-show="!isDynamic">{{ i18n.__('Cancel') }}</a>
         <div class="pull-right">
           <button class="btn btn-primary" type="submit" ng-click="goToValidPreviousStep('filterForm');" wz-previous>{{ i18n.__('Previous') }}</button>
           <button class="btn btn-primary" type="submit" ng-show="isDynamic && semantics !== 'GRID' && !wizard.intersection.disabled" ng-click="goToValidNextStep('filterForm');" wz-next>{{ i18n.__('Next') }}</button>
@@ -168,8 +168,8 @@
       </div>
 
       <div class="col-md-12" style="margin-top: 30px;">
-        <a href="{[ BASE_URL ]}configuration/dynamic/dataseries/" class="btn btn-primary pull-left" ng-show="isDynamic">{{ i18n.__('Cancel') }}</a>
-        <a href="{[ BASE_URL ]}configuration/static/dataseries" class="btn btn-primary pull-left" ng-show="!isDynamic">{{ i18n.__('Cancel') }}</a>
+        <a href="" class="btn btn-primary pull-left cancel-dynamic" ng-show="isDynamic">{{ i18n.__('Cancel') }}</a>
+        <a href="" class="btn btn-primary pull-left cancel-static" ng-show="!isDynamic">{{ i18n.__('Cancel') }}</a>
         <div class="pull-right">
           <button class="btn btn-primary" type="submit" ng-click="goToValidPreviousStep('intersectionForm');" wz-previous>{{ i18n.__('Previous') }}</button>
           <div class="btn-group pull-right" style="margin-left: 3px;" ng-show="isDynamic && storager.format">
@@ -196,11 +196,17 @@
     var includeFilter = "'" + BASE_URL + "dist/templates/filter.html'";
     var includeGeneralData = "'" + BASE_URL + "dist/templates/generalData.html'";
 
+    var cancelDynamic = BASE_URL + "configuration/dynamic/dataseries/";
+    var cancelStatic = BASE_URL + "configuration/static/dataseries";
+
     $("#wizard").attr("template", templatePath);
     $("#includeDcpTable").attr("ng-include", includeDcpTable);
     $("#includeIntersection").attr("ng-include", includeIntersection);
     $("#includeFilter").attr("ng-include", includeFilter);
     $("#includeGeneralData").attr("ng-include", includeGeneralData);
+
+    $(".cancel-dynamic").attr("href", cancelDynamic);
+    $(".cancel-static").attr("href", cancelStatic);
   </script>
 
 </div>
