--- a/webapp/public/javascripts/angular/advanced.html
+++ b/webapp/public/javascripts/angular/advanced.html
@@ -47,8 +47,12 @@
 
           <div class="col-md-12">
             <!-- schema form -->
-            <form name="forms.parametersForm" sf-schema="schema" sf-form="form" sf-model="model" sf-options="options"></form>
-
+            <form name="forms.parametersForm" sf-schema="schema" sf-form="form" sf-model="model" sf-options="options">
+              
+            </form>
+<div class="col-md-12">
+                <button ng-click="importShapefile()">+</button>
+              </div>
             <div class="col-md-3 terrama2-top-field" style="padding-bottom: 40px;">
               <button class="btn btn-default" ng-show="semantics === 'DCP'" ng-click="addDcp(parametersForm)">{{ i18n.__('Add') }}</button>
               <button class="btn btn-default" ng-show="semantics === 'DCP'" ng-click="openImportParametersModal()">{{ i18n.__('Import CSV') }}</button>
