--- a/webapp/public/javascripts/angular/advanced.html
+++ b/webapp/public/javascripts/angular/advanced.html
@@ -47,12 +47,7 @@
 
           <div class="col-md-12">
             <!-- schema form -->
-            <form name="forms.parametersForm" sf-schema="schema" sf-form="form" sf-model="model" sf-options="options">
-              
-            </form>
-<div class="col-md-12">
-                <button ng-click="importShapefile()">+</button>
-              </div>
+            <form name="forms.parametersForm" sf-schema="schema" sf-form="form" sf-model="model" sf-options="options"></form>
             <div class="col-md-3 terrama2-top-field" style="padding-bottom: 40px;">
               <button class="btn btn-default" ng-show="semantics === 'DCP'" ng-click="addDcp(parametersForm)">{{ i18n.__('Add') }}</button>
               <button class="btn btn-default" ng-show="semantics === 'DCP'" ng-click="openImportParametersModal()">{{ i18n.__('Import CSV') }}</button>
@@ -61,7 +56,11 @@
             <terrama2-dcp-importer></terrama2-dcp-importer>
             <div id="includeDcpTable" ng-include=""></div>
           </div>
-
+        </div>
+        <div class="col-md-12" ng-if="!isDynamic">
+          <div class="col-md-12">
+            <terrama2-shapefile-importer></terrama2-shapefile-importer>
+          </div>
         </div>
       </div>
     </div>
