improving shapefile importation button

--- a/webapp/public/javascripts/angular/advanced.html
+++ b/webapp/public/javascripts/angular/advanced.html
@@ -59,7 +59,7 @@
           </div>
 
         </div>
-        <div class="col-md-12" ng-if="!isDynamic">
+        <div class="col-md-12" ng-if="!isDynamic && semanticsCode === 'STATIC_DATA-postgis'">
           <div class="col-md-12">
             <terrama2-shapefile-importer></terrama2-shapefile-importer>
           </div>
