fixing intersection messages and auto completing database fields

--- a/webapp/public/javascripts/angular/advanced.html
+++ b/webapp/public/javascripts/angular/advanced.html
@@ -221,3 +221,8 @@
 <datalist id='databaseTableList'>
     <option ng-repeat="table in tableList" value="{{table}}">
 </datalist>
+<!-- List with database table columns-->
+<datalist id='tableParamsColumnsList'>
+    <option ng-repeat="paramsColumn in paramsColumnsList" value="{{paramsColumn}}">
+</datalist>
+<!-- /.row -->
