--- a/webapp/public/javascripts/angular/advanced.html
+++ b/webapp/public/javascripts/angular/advanced.html
@@ -64,6 +64,11 @@
             <terrama2-shapefile-importer></terrama2-shapefile-importer>
           </div>
         </div>
+        <div class="col-md-12" ng-if="!isDynamic && (semanticsCode === 'GRID-static_gdal' && isDataProviderFolder())">
+          <div class="col-md-12">
+            <terrama2-geotiff-importer></terrama2-geotiff-importer>
+          </div>
+        </div>
       </div>
     </div>
   </div>
